# ethan-cookiecutter-base

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .bashrc  .flake8  .gitignore  .pre-commit-config.yaml  .zshrc  README.rst  activate.sh  environment.yml  noxfile.py  pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/.github/: ISSUE_TEMPLATE.md
{{ cookiecutter.project_slug }}/tests/: test_installed.py
